kubernetes/client-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\Users\deelk\Desktop\Studium\kompose.exe convert
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: client-service
  name: client-service
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: client-service
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: C:\Users\deelk\Desktop\Studium\kompose.exe convert
        kompose.version: 1.26.1 (a9d05d509)
      creationTimestamp: null
      labels:
        io.kompose.network/client-network: "true"
        io.kompose.service: client-service
    spec:
      containers:
        - image: client-service
          name: client-service
          resources: {}
      restartPolicy: Always
status: {}
