kubernetes/pgadmin-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\Users\deelk\Desktop\Studium\kompose.exe convert
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: pgadmin
  name: pgadmin
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: pgadmin
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: C:\Users\deelk\Desktop\Studium\kompose.exe convert
        kompose.version: 1.26.1 (a9d05d509)
      creationTimestamp: null
      labels:
        io.kompose.network/pgAdmin-network: "true"
        io.kompose.network/postgres-network: "true"
        io.kompose.service: pgadmin
    spec:
      containers:
        - env:
            - name: PGADMIN_DEFAULT_EMAIL
              value: postgres@pg.com
            - name: PGADMIN_DEFAULT_PASSWORD
              value: postgres
          image: dpage/pgadmin4
          name: pgAdmin
          ports:
            - containerPort: 80
          resources: {}
      restartPolicy: Always
status: {}
