kubernetes/redis-cache-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\Users\deelk\Desktop\Studium\kompose.exe convert
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: redis-cache
  name: redis-cache
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: redis-cache
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: C:\Users\deelk\Desktop\Studium\kompose.exe convert
        kompose.version: 1.26.1 (a9d05d509)
      creationTimestamp: null
      labels:
        io.kompose.network/cache-network: "true"
        io.kompose.service: redis-cache
    spec:
      containers:
        - args:
            - /opt/bitnami/scripts/redis/run.sh
            - --maxmemory
            - 100mb
          image: redis
          name: redis-cache
          ports:
            - containerPort: 6379
          resources: {}
      restartPolicy: Always
status: {}
