kubernetes/reverse-proxy-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\Users\deelk\Desktop\Studium\kompose.exe convert
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: reverse-proxy
  name: reverse-proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: reverse-proxy
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: C:\Users\deelk\Desktop\Studium\kompose.exe convert
        kompose.version: 1.26.1 (a9d05d509)
      creationTimestamp: null
      labels:
        io.kompose.network/authentication-network: "true"
        io.kompose.network/cart-network: "true"
        io.kompose.network/catalogue-network: "true"
        io.kompose.network/checkout-network: "true"
        io.kompose.network/client-network: "true"
        io.kompose.network/pgAdmin-network: "true"
        io.kompose.service: reverse-proxy
    spec:
      containers:
        - image: reverse-proxy
          name: reverse-proxy
          ports:
            - containerPort: 80
          resources: {}
      restartPolicy: Always
status: {}
