kubernetes/pgAdmin-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\Users\deelk\Desktop\Studium\kompose.exe convert
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: pgadmin
  name: pgAdmin
spec:
  ports:
    - name: "2345"
      port: 2345
      targetPort: 80
  selector:
    io.kompose.service: pgadmin
status:
  loadBalancer: {}
