kubernetes/cache-network-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: cache-network
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/cache-network: "true"
  podSelector:
    matchLabels:
      io.kompose.network/cache-network: "true"
