kubernetes/checkout-network-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: checkout-network
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/checkout-network: "true"
  podSelector:
    matchLabels:
      io.kompose.network/checkout-network: "true"
